--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,23 +24,23 @@
         android:weightSum="9.0">
 
         <LinearLayout
-            android:weightSum="5"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="5">
 
             <Button
-                android:layout_weight="3"
                 android:id="@+id/btn_page"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
+                android:layout_weight="3"
                 android:background="@drawable/website" />
 
             <TextView
-                android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="2"
                 android:gravity="center"
                 android:text="WebSide"
                 android:textColor="#ec0404" />
@@ -58,12 +58,11 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:src="@drawable/notify"
                     android:id="@+id/btn_alerm"
                     android:layout_width="wrap_content"
                     android:layout_height="33dp"
                     android:layout_gravity="center"
-                     />
+                    android:src="@drawable/notify" />
 
                 <com.nex3z.notificationbadge.NotificationBadge
                     android:id="@+id/badge"
